<resources>
    <string name="app_name">Assign2 Sean Heaslip</string>
    <string name="str_Blank" />
    <string name="str_CallActivity">Explicit Intent: Call an activity</string>
    <string name="str_ViewPicture">Implicit Intent: View Picture</string>
    <string name="str_OpenCamera">Implicit Intent: Open Camera</string>
    <string name="str_Send">Send</string>
    <string name="hint_Subject">Subject:</string>
    <string name="hint_To">To:</string>
    <string name="hint_Compose">Compose message:</string>
    <string name="MsgViewBut_Send">Send</string>
</resources>
