<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context="id_16109759_hdsd.assign2seanheaslip.MessageView">

    <!--Note if I had used an xml file in landscape I would have added
            android:hint for each EditText to the styles.xml-->
    <EditText
        style="@style/MsgViewEdtTextStyle"
        android:id="@+id/edTxt_To"
        android:hint="@string/hint_To" />

    <EditText
        style="@style/MsgViewEdtTextStyle"
        android:id="@+id/edTxt_Subject"
        android:hint="@string/hint_Subject"
        android:layout_below="@+id/edTxt_To"
         />

    <EditText
        style="@style/MsgViewEdtTextStyle"
        android:id="@+id/edTxt_Compose"
        android:hint="@string/hint_Compose"
        android:layout_below="@id/edTxt_Subject"
        android:layout_above="@+id/msgSendButton" />

    <Button
        style="@style/GeneralButtonStyle"
        android:id="@+id/msgSendButton"
        android:onClick="sendMessage"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/colorTextBlack"/>

</RelativeLayout>
